infra/overlays/prod/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spt-backend
spec:
  template:
    spec:
      containers:
        - name: spt-backend
