infra/overlays/prod/fe_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spt-fe
spec:
  template:
    spec:
      containers:
        - name: spt-fe
