infra/overlays/prod/ing.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spt-fe
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`spotpricetracker.com`, `www.spotpricetracker.com`)"
      services:
        - name: spt-fe
          port: 80
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spt-be
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`api.spotpricetracker.com`)"
      services:
        - name: spt-be
          port: 80
